exports[`(.not).toHaveBadGatewayStatus > using axios > .not.toHaveBadGatewayStatus > fails when response have status code 502 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveBadGatewayStatus()</intensity>

Expected status code to not be 502 received:
  <red>502</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 502,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveBadGatewayStatus > using axios > .toHaveBadGatewayStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveBadGatewayStatus()</intensity>

Expected status code to be 502 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
